--- a/vignettes/methylclock.Rmd
+++ b/vignettes/methylclock.Rmd
@@ -38,9 +38,11 @@ This manual describes how to estimate chronological and gestational DNA methylat
 - **Hannum's clock**: It uses 71 CpGs described in @hannum2013genome. It was trained using 450K array in blood samples. Another are-related biomarer is also computed:
      - **AMAR** (Apparent Methylomic Aging Rate): Measure proposed in @hannum2013genome computed as the ratio between DNAm age and the chronological age.
 - **BNN**: It uses Horvath's CpGs to train a Bayesian Neural Network (BNN) to predict DNAm age as described in @alfonso2018.
-- **Horvath's skin+blood clock (skinHorvath)**: Epigenetic clock for skin and blood cells. It uses 391 CpGs described in @horvath2018epigenetic. It was trained using 450K EPIC arrays in skin and blood sampels.
+- **Horvath's skin+blood clock (skinHorvath)**: Epigenetic clock for skin and blood cells. It uses 391 CpGs described in @horvath2018epigenetic. It was trained using 450K and EPIC arrays in skin and blood sampels.
 - **PedBE clock**: Epigenetic clock from buccal epithelial swabs. It's intended purpose is buccal samples from individuals aged 0-20 years old. It uses 84 CpGs described in @mcewen2019pedbe. The authors gathered 1,721 genome-wide DNAm profiles from 11 different cohorts with individuals aged 0 to 20 years old. 
 - **Wu's clock**: It uses 111 CpGs described in @wu2019dna. It is designed to predict age in children. It was trained using 27K and 450K.
+- **BLUP clock**:  It uses 319607 CpGs described in @zhang2019improved. It was trained using 450K and EPIC arrays in blood (13402 samples) and saliva (259 samples). Age predictors based on training sets with various sample sizes using Best Linear Unbiased Prediction (BLUP)  
+- **EN clock**:  It uses 514 CpGs described in @zhang2019improved. It was trained using 450K and EPIC arrays in blood (13402 samples) and saliva (259 samples). Age predictors based on training sets with various sample sizes using Elastic Net (EN) 
 
 ## Gestational DNAm age (in weeks)
 
@@ -250,7 +252,7 @@ age.example55.2
 
 In that case, we see as SkinHorvath clock is estimated (though it can be observed that the estimation is not very accurate - this is why we considered at least having 80% of the required CpGs).
 
-By default all available clocks (Hovarth, Hannum, Levine, BNN, skinHorvath, ...) are estimated. One may select a set of clocks by using the argument `clocks` as follows:
+By default all available clocks (Horvath, Hannum, Levine, BNN, skinHorvath, ...) are estimated. One may select a set of clocks by using the argument `clocks` as follows:
 
 
 ```{r DNAmAge_horvath_sel, warning=TRUE}
@@ -308,13 +310,13 @@ kruskal.test(age.example55$ageAcc3.Horvath ~ autism)
 One may be interested in assessing association between chronologial age and DNA methylation age or evaluating how well chronological age is predicted by DNAmAge. In order to illustrate this analysis we downloaded data from GEO corresponding to a set of healthy individuals (GEO accession number GSE58045). Data can be retrieved into R by using `GEOquery` package as an `ExpressionSet` object that can be the input of our main function. 
 
 
-```{r get_gse58045, echo=FALSE}
-ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
-load(file.path(ff, "data/GSE58045.Rdata"))
+```{r get_gse58045, echo=FALSE, eval=FALSE}
+# ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
+# load(file.path(ff, "data/GSE58045.Rdata"))
 ```
 
 
-```{r get_geo_gse58045, eval=FALSE}
+```{r get_geo_gse58045, eval=TRUE}
 dd <- GEOquery::getGEO("GSE58045")
 gse58045 <- dd[[1]]
 ```
@@ -352,12 +354,12 @@ plotDNAmAge(age.gse58045$BNN, age, tit="Bayesian Neural Network")
 Let us illustrate how to use DNAmAge information in association studies (e.g case/control, smokers/non-smokers, responders/non-responders, ...). GEO number GSE19711 contains transcriptomic and epigenomic data of a study in lung cancer. Data can be retrieved into R by
 
 
-```{r get_gse19711, echo=FALSE}
-ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
-load(file.path(ff, "data/GSE19711.Rdata"))
+```{r get_gse19711, echo=FALSE, eval=FALSE}
+# ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
+# load(file.path(ff, "data/GSE19711.Rdata"))
 ```
 
-```{r get_geo_gse19711, eval=FALSE}
+```{r get_geo_gse19711, eval=TRUE}
 dd <- GEOquery::getGEO("GSE19711")
 gse19711 <- dd[[1]]
 ```
@@ -447,11 +449,11 @@ Here we observe as the positive association disapears after adjusting for cell c
 
 
 ```{r get_gse109446, echo=FALSE}
-ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
-load(file.path(ff, "data/GSE109446.Rdata"))
+# ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
+# load(file.path(ff, "data/GSE109446.Rdata"))
 ```
 
-```{r get_geo_109446, eval=FALSE}
+```{r get_geo_109446, eval=TRUE}
 dd <- GEOquery::getGEO("GSE109446")
 gse109446 <- dd[[1]]
 ```
