--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -292,3 +292,15 @@
   doi = {10.1186/s12864-020-07186-6},
   url = {https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6},
 }
+
+
+@article{haftorn2021epic,
+  title={An EPIC predictor of gestational age and its application to newborns conceived by assisted reproductive technologies},
+  author={Haftorn, Kristine L and Lee, Yunsung and Denault, William RP and Page, Christian M and Nustad, Haakon E and Lyle, Robert and Gjessing, H{\aa}kon K and Malmberg, Anni and Magnus, Maria C and N{\ae}ss, {\O}yvind and others},
+  journal={Clinical epigenetics},
+  volume={13},
+  number={1},
+  pages={1--13},
+  year={2021},
+  publisher={BioMed Central}
+}
