--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -245,3 +245,62 @@
   year={2013},
   publisher={Taylor \& Francis}
 }
+
+@article{zhang2019improved,
+  title={Improved precision of epigenetic clock estimates across tissues and its implication for biological ageing},
+  author={Zhang, Qian and Vallerga, Costanza L and Walker, Rosie M and Lin, Tian and Henders, Anjali K and Montgomery, Grant W and He, Ji and Fan, Dongsheng and Fowdar, Javed and Kennedy, Martin and others},
+  journal={Genome medicine},
+  volume={11},
+  number={1},
+  pages={1--11},
+  year={2019},
+  publisher={Springer}
+}
+
+@Manual{planet_pkg,
+  title = {Placental DNA methylation analysis tools},
+  author = {Victor Yuan},
+  year = {2022},
+  url = {http://www.bioconductor.org/packages/planet},
+  note = {https://github.com/wvictor14/planet - R package version 1.1.0},
+  doi = {10.18129/B9.bioc.planet},
+}
+
+@Article{planet_etn,
+  title = {Accurate ethnicity prediction from placental DNA methylation data},
+  author = {Victor Yuan and Magda E. Price and Giulia {Del Gobbo} and Sara Mostafavi and Brian Cox and Alexandra M. Binder and Karin B. Michels and Carmen Marsit and Wendy P. Robinson},
+  year = {2019},
+  journal = {BMC Epigenetics & Chromatin},
+  doi = {10.1186/s13072-019-0296-3},
+  url = {https://epigeneticsandchromatin.biomedcentral.com/articles/10.1186/s13072-019-0296-3},
+}
+
+@Article{planet_clock,
+  title = {Placental epigenetic clocks: estimating gestational age using placental DNA methylation levels},
+  author = {Yunsung Lee and Sanaa Choufani and Rosanna Weksberg and Samantha L. Wilson and Victor Yuan and Amber Burt and Carmen Marsit and Ake T. Lu and Beate Ritz and Jon Bohlin and Hakon K. Gjessing and Jennifer R. Harris and Per Magnus and Alexandra M. Binder and Wendy P. Robinson and Astanand Jugessur and Steve Horvath},
+  year = {2019},
+  journal = {Aging (Albany NY)},
+  doi = {10.18632/aging.102049},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6628997/},
+}
+
+@Article{planet_cells,
+  title = {Cell-specific characterization of the placental methylome},
+  author = {Victor Yuan and Desmond Hui and Maria S. Penaherrera and Alexander G. Beristain and Wendy P. Robinson},
+  year = {2021},
+  journal = {BMC Genomics},
+  doi = {10.1186/s12864-020-07186-6},
+  url = {https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6},
+}
+
+
+@article{haftorn2021epic,
+  title={An EPIC predictor of gestational age and its application to newborns conceived by assisted reproductive technologies},
+  author={Haftorn, Kristine L and Lee, Yunsung and Denault, William RP and Page, Christian M and Nustad, Haakon E and Lyle, Robert and Gjessing, H{\aa}kon K and Malmberg, Anni and Magnus, Maria C and N{\ae}ss, {\O}yvind and others},
+  journal={Clinical epigenetics},
+  volume={13},
+  number={1},
+  pages={1--13},
+  year={2021},
+  publisher={BioMed Central}
+}
