--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -304,3 +304,13 @@
   year={2021},
   publisher={BioMed Central}
 }
+@article{graw2021neoage,
+  title={NEOage clocks-Epigenetic clocks to estimate post-menstrual and postnatal age in preterm infants},
+  author={Graw, Stefan and Camerota, Marie and Carter, Brian S and Helderman, Jennifer and Hofheimer, Julie A and McGowan, Elisabeth C and Neal, Charles R and Pastyrnak, Steven L and Smith, Lynne M and DellaGrotta, Sheri A and others},
+  journal={Aging (Albany NY)},
+  volume={13},
+  number={20},
+  pages={23527},
+  year={2021},
+  publisher={Impact Journals, LLC}
+}
