--- a/vignettes/clocks.Rmd
+++ b/vignettes/clocks.Rmd
@@ -158,7 +158,7 @@ knitr::opts_chunk$set(echo = TRUE)
     <td class="tg-uhil">Chronological</td>
     <td class="tg-uhil">450K</td>
     <td class="tg-uhil">409</td>
-    <td class="tg-uhil"></td>
+    <td class="tg-uhil">Post-Menstrual age</td>
     <td class="tg-uhil">Weeks</td>
     <td class="tg-uhil">NEOaPMA450K</td>
     <td class="tg-uhil">@graw2021neoage</td>
@@ -169,7 +169,7 @@ knitr::opts_chunk$set(echo = TRUE)
     <td class="tg-uhil">Chronological</td>
     <td class="tg-uhil">EPIC</td>
     <td class="tg-uhil">522</td>
-    <td class="tg-uhil"></td>
+    <td class="tg-uhil">Post-Menstrual age</td>
     <td class="tg-uhil">Weeks</td>
     <td class="tg-uhil">NEOaPMAEPIC</td>
     <td class="tg-uhil">@graw2021neoage</td>
@@ -180,7 +180,7 @@ knitr::opts_chunk$set(echo = TRUE)
     <td class="tg-uhil">Chronological</td>
     <td class="tg-uhil">450K</td>
     <td class="tg-uhil">303</td>
-    <td class="tg-uhil"></td>
+    <td class="tg-uhil">Post-Natal age</td>
     <td class="tg-uhil">Weeks</td>
     <td class="tg-uhil">NEOaPNA450K</td>
     <td class="tg-uhil">@graw2021neoage</td>
@@ -191,7 +191,7 @@ knitr::opts_chunk$set(echo = TRUE)
     <td class="tg-uhil">Chronological</td>
     <td class="tg-uhil">EPIC</td>
     <td class="tg-uhil">509</td>
-    <td class="tg-uhil"></td>
+    <td class="tg-uhil">Post-Natal age</td>
     <td class="tg-uhil">Weeks</td>
     <td class="tg-uhil">NEOaPNAEPIC</td>
     <td class="tg-uhil">@graw2021neoage</td>
@@ -339,7 +339,7 @@ knitr::opts_chunk$set(echo = TRUE)
     <td class="tg-qn4v">Other biological</td>
     <td class="tg-qn4v">27K - 450k - EPIC</td>
     <td class="tg-qn4v">313</td>
-    <td class="tg-qn4v"></td>
+    <td class="tg-qn4v">Biological Age</td>
     <td class="tg-qn4v">Years</td>
     <td class="tg-qn4v">Levine</td>
     <td class="tg-qn4v">@levine2018epigenetic</td>
@@ -350,7 +350,7 @@ knitr::opts_chunk$set(echo = TRUE)
     <td class="tg-qn4v">Other biological</td>
     <td class="tg-qn4v">450K - EPIC</td>
     <td class="tg-qn4v">140</td>
-    <td class="tg-qn4v"></td>
+    <td class="tg-qn4v">Telomere Length</td>
     <td class="tg-qn4v">Kb</td>
     <td class="tg-qn4v">TL</td>
     <td class="tg-qn4v">@lu2019dna</td>
