bug in mask - DunedinPACE clock

--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -314,3 +314,13 @@
   year={2021},
   publisher={Impact Journals, LLC}
 }
+
+@article{belsky2022dunedinpace,
+  title={DunedinPACE, a DNA methylation biomarker of the pace of aging},
+  author={Belsky, Daniel W and Caspi, Avshalom and Corcoran, David L and Sugden, Karen and Poulton, Richie and Arseneault, Louise and Baccarelli, Andrea and Chamarti, Kartik and Gao, Xu and Hannon, Eilis and others},
+  journal={Elife},
+  volume={11},
+  pages={e73420},
+  year={2022},
+  publisher={eLife Sciences Publications Limited}
+}
